@@ -3,7 +3,6 @@ package uk.gov.hmcts.reform.professionalapi.controller.request.validator;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.StringUtils;
@@ -57,8 +56,7 @@ public class ProfessionalUserReqValidator {
 
         List<RoleName> emptyRoles = new ArrayList<>();
         if (!CollectionUtils.isEmpty(roleNames)) {
-            emptyRoles = roleNames.stream().filter(roleName -> StringUtils.isBlank(roleName.getName()))
-                    .collect(Collectors.toList());
+            emptyRoles = roleNames.stream().filter(roleName -> StringUtils.isBlank(roleName.getName())).toList();
 
         }
         return !emptyRoles.isEmpty();
